--- a/index .html
+++ b/index .html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Vitamin Recommender</title>
-    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
